# FastAPI

Microshop/: README.md  crud.py  docker-compose.yml  items_views.py  main.py  pyproject.toml  requirements.txt  test_main.http
Microshop/alembic/: env.py
Microshop/alembic/versions/: 2024_10_16_1829-dd2df2992a7d_create_product_table.py  2024_10_17_1402-d41b97ad197a_create_product_table.py  2024_10_17_1403-bf5f756e209c_create_users_table.py  2024_10_18_1520-728b438f08bd_create_posts_table.py  2024_10_18_1639-f40f7a8175cc_create_profile_table.py  2024_10_21_1724-8dbf46ce253d_create_orders_table.py  2024_10_23_1408-942b80eac4e1_create_order_product_association_table.py  2024_10_24_1444-49d61594b9c8_add_count_column_to_order_product_.py  2024_10_24_1537-e1af68a5d60c_add_unit_price_column_to_order_product_.py
Microshop/api_v1/: __init__.py
Microshop/api_v1/demo_auth/: crud.py  demo_jwt_auth.py  helpers.py  validation.py  views.py
Microshop/api_v1/products/: crud.py  dependencies.py  views.py
Microshop/auth/: README.md  utils.py
Microshop/base-app/: .env.template  alembic.ini  main.py
Microshop/base-app/actions/: create_superuser.py
Microshop/base-app/alembic/: env.py
Microshop/base-app/alembic/versions/: 2024_12_17_1816-382153a77706_create_users_table.py  2024_12_18_1908-5668fd187fad_create_users_table.py  2024_12_18_1927-687fca3a52c3_update_users_table.py  2024_12_20_1849-a01d8767df6b_create_users_table.py  2024_12_23_1432-a00e87476112_create_access_tokens_table.py
Microshop/base-app/api/: __init__.py
Microshop/base-app/core/: config.py
Microshop/base-app/utils/: helper.py
Microshop/core/: config.py
Microshop/core/models/: __init__.py  db_helpers.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py  users.py
Microshop/users/: crud.py  schemas.py  views.py
(+23 files in other folders)
