[tool.poetry]
name = "microshop"
version = "0.1.0"
description = "Educational example of using FastAPI"
authors = ["CarAndAsh <zeixes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry = "^1.8.4"
fastapi = "^0.115.4"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
